# baxter_translator

./: README.md
translator_driver/: CMakeLists.txt  package.xml  setup.py
translator_driver/scripts/: devel.py  start_translator.py
translator_vision/: CMakeLists.txt  package.xml  setup.py
translator_vision/scripts/: body_coord.py  start_vision.py
